fixed home page title alignment

--- a/client/components/Home.css
+++ b/client/components/Home.css
@@ -1,7 +1,3 @@
-.homeParent {
-  display: flex;
-}
-
 #bg {
   position: fixed;
   top: -50%;
